--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,17 +16,17 @@ endif()
 
 set(    BR_SERVER      1    CACHE BOOL "BR_SERVER"          )
 set(    BR_CLIENT      1    CACHE BOOL "BR_CLIENT"          )
-set(    BR_SERVER_TEST 0    CACHE BOOL "BR_SERVER_TEST"     )           # <--- DELETE THIS ON STABLE
-set(    BR_CLIENT_TEST 0    CACHE BOOL "BR_CLIENT_TEST"     )           # <--- DELETE THIS ON STABLE
-set(    BR_REGEX_TEST  0    CACHE BOOL "BR_REGEX_TEST"      )           # <--- DELETE THIS ON STABLE
-set(    BR_MINIDB_TEST 0    CACHE BOOL "BR_MINIDB_TEST"     )           # <--- DELETE THIS ON STABLE
+set(    BR_TEST_SERVER 1    CACHE BOOL "BR_TEST_SERVER"     )           # <--- DELETE THIS ON STABLE
+set(    BR_TEST_CLIENT 1    CACHE BOOL "BR_TEST_CLIENT"     )           # <--- DELETE THIS ON STABLE
+set(    BR_TEST_REGEX  1    CACHE BOOL "BR_TEST_REGEX"      )           # <--- DELETE THIS ON STABLE
+set(    BR_TEST_MINIDB 1    CACHE BOOL "BR_TEST_MINIDB"     )           # <--- DELETE THIS ON STABLE
 
 set(    BR_SERVER_NAME          BattleshipRoyale_Server         )
 set(    BR_CLIENT_NAME          BattleshipRoyale_Client         )
-set(    BR_SERVER_NAME_TEST     BattleshipRoyale_Server_TEST    )       # <--- DELETE THIS ON STABLE
-set(    BR_CLIENT_NAME_TEST     BattleshipRoyale_CLIENT_TEST    )       # <--- DELETE THIS ON STABLE
-set(    BR_REGEX_NAME_TEST      BattleshipRoyale_REGEX_TEST     )       # <--- DELETE THIS ON STABLE
-set(    BR_MINIDB_NAME_TEST     BattleshipRoyale_MINIDB_TEST    )       # <--- DELETE THIS ON STABLE
+set(    BR_TEST_SERVER_NAME     BattleshipRoyale_Server_TEST    )       # <--- DELETE THIS ON STABLE
+set(    BR_TEST_CLIENT_NAME     BattleshipRoyale_CLIENT_TEST    )       # <--- DELETE THIS ON STABLE
+set(    BR_TEST_REGEX_NAME      BattleshipRoyale_REGEX_TEST     )       # <--- DELETE THIS ON STABLE
+set(    BR_TEST_MINIDB_NAME     BattleshipRoyale_MINIDB_TEST    )       # <--- DELETE THIS ON STABLE
 
 ################################
 # Lib
@@ -53,15 +53,15 @@ set(    BR_LIB_INCLUDE          "${CMAKE_SOURCE_DIR}/src/BattleshipRoyale"      
 ################################
 
 # Header only
-include_directories(${SPDLOG_LIB_INCLUDE})
-include_directories(${CXXOPTS_LIB_INCLUDE})
-include_directories(${PICOSHA2_LIB_INCLUDE})
-include_directories(${BR_LIB_INCLUDE})
+#include_directories(${SPDLOG_LIB_INCLUDE})
+#include_directories(${CXXOPTS_LIB_INCLUDE})
+#include_directories(${PICOSHA2_LIB_INCLUDE})
+#include_directories(${BR_LIB_INCLUDE})
 
 # OS Specific
 if(BR_WINDOWS)
-    include_directories(${SQLITE3_LIB_INCLUDE})
-    include_directories(${Boost_INCLUDE_DIRS})
+#    include_directories(${SQLITE3_LIB_INCLUDE})
+#    include_directories(${Boost_INCLUDE_DIRS})
     link_directories(${Boost_LIBRARY_DIRS})
 endif()
 
@@ -101,18 +101,22 @@ if(BR_SERVER)
 	add_subdirectory(src/server)
 endif()
 
-if(BR_SERVER_TEST)                                 # <--- DELETE THIS ON STABLE
+################################
+# Тестирование
+################################
+
+if(BR_TEST_SERVER)                                 # <--- DELETE THIS ON STABLE
 	add_subdirectory(src/testing/server)           # <--- DELETE THIS ON STABLE
 endif()                                            # <--- DELETE THIS ON STABLE
 
-if(BR_CLIENT_TEST)                                 # <--- DELETE THIS ON STABLE
+if(BR_TEST_CLIENT)                                 # <--- DELETE THIS ON STABLE
 	add_subdirectory(src/testing/client)           # <--- DELETE THIS ON STABLE
 endif()                                            # <--- DELETE THIS ON STABLE
 
-if(BR_REGEX_TEST)                                  # <--- DELETE THIS ON STABLE
+if(BR_TEST_REGEX)                                  # <--- DELETE THIS ON STABLE
 	add_subdirectory(src/testing/regex)            # <--- DELETE THIS ON STABLE
 endif()                                            # <--- DELETE THIS ON STABLE
 
-if(BR_MINIDB_TEST)                                 # <--- DELETE THIS ON STABLE
+if(BR_TEST_MINIDB)                                 # <--- DELETE THIS ON STABLE
 	add_subdirectory(src/testing/minidb)           # <--- DELETE THIS ON STABLE
 endif()                                            # <--- DELETE THIS ON STABLE
