--- a/src/testing/server/CMakeLists.txt
+++ b/src/testing/server/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(${BR_SERVER_NAME_TEST})
+project(${BR_TEST_SERVER_NAME})
 
 ################################
 # Sources
@@ -16,20 +16,23 @@ set(BR_SERVER_SOURCES_TEST
 ################################
 # Executable
 ################################
-add_executable(${BR_SERVER_NAME_TEST} ${BR_SERVER_HEADERS_TEST} ${BR_SERVER_SOURCES_TEST})
+add_executable(${BR_TEST_SERVER_NAME} ${BR_SERVER_HEADERS_TEST} ${BR_SERVER_SOURCES_TEST})
 
 ################################
 # Link Lib
 ################################
-target_link_libraries(${BR_SERVER_NAME_TEST} ${USE_LIB})
+target_link_libraries(${BR_TEST_SERVER_NAME} ${USE_LIB})
 
-if(BR_UNIX)
-	target_link_libraries(${BR_SERVER_NAME_TEST} sqlite3)
-endif()
+target_include_directories(${BR_TEST_SERVER_NAME} PUBLIC ${Boost_INCLUDE_DIRS})
+target_include_directories(${BR_TEST_SERVER_NAME} PUBLIC ${SPDLOG_LIB_INCLUDE})
+
+#if(BR_UNIX)
+#	target_link_libraries(${BR_TEST_SERVER_NAME} sqlite3)
+#endif()
 
 # OS Specific
 if(BR_WINDOWS)
-	target_link_libraries(${BR_SERVER_NAME_TEST} ${SQLITE3_LIBRARY})
-	target_link_libraries(${BR_SERVER_NAME_TEST} ws2_32)
-	target_link_libraries(${BR_SERVER_NAME_TEST} wsock32)
+#	target_link_libraries(${BR_TEST_SERVER_NAME} ${SQLITE3_LIBRARY})
+	target_link_libraries(${BR_TEST_SERVER_NAME} ws2_32)
+	target_link_libraries(${BR_TEST_SERVER_NAME} wsock32)
 endif()
