--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -24,6 +24,11 @@ add_executable(${BR_CLIENT_NAME} ${BR_CLIENT_HEADERS} ${BR_CLIENT_SOURCES})
 
 target_link_libraries(${BR_CLIENT_NAME} ${USE_LIB} ${CURSES_LIBRARIES})
 
+target_include_directories(${BR_CLIENT_NAME} PUBLIC ${SPDLOG_LIB_INCLUDE})
+target_include_directories(${BR_CLIENT_NAME} PUBLIC ${CXXOPTS_LIB_INCLUDE})
+target_include_directories(${BR_CLIENT_NAME} PUBLIC ${BR_LIB_INCLUDE})
+target_include_directories(${BR_CLIENT_NAME} PUBLIC ${Boost_INCLUDE_DIRS})
+
 #if(BR_UNIX)
 #	target_link_libraries(${BR_CLIENT_NAME} sqlite3)
 #endif()
