--- a/src/testing/client/CMakeLists.txt
+++ b/src/testing/client/CMakeLists.txt
@@ -1,29 +1,33 @@
-project(${BR_CLIENT_NAME_TEST})
+project(${BR_TEST_CLIENT_NAME})
 
 ################################
 # Sources
 ################################
 
-set(BR_CLIENT_SOURCES_TEST
+set(BR_TEST_CLIENT_SOURCES
 	client.cpp)
 
 ################################
 # Executable
 ################################
-add_executable(${BR_CLIENT_NAME_TEST} ${BR_CLIENT_SOURCES_TEST})
+add_executable(${BR_TEST_CLIENT_NAME} ${BR_TEST_CLIENT_SOURCES})
 
 ################################
 # Link Lib
 ################################
-target_link_libraries(${BR_CLIENT_NAME_TEST} ${USE_LIB})
+target_link_libraries(${BR_TEST_CLIENT_NAME} ${USE_LIB})
 
-if(BR_UNIX)
-	target_link_libraries(${BR_CLIENT_NAME_TEST} sqlite3)
-endif()
+target_include_directories(${BR_TEST_CLIENT_NAME} PUBLIC ${SPDLOG_LIB_INCLUDE})
+target_include_directories(${BR_TEST_CLIENT_NAME} PUBLIC ${BR_LIB_INCLUDE})
+target_include_directories(${BR_TEST_CLIENT_NAME} PUBLIC ${Boost_INCLUDE_DIRS})
+
+#if(BR_UNIX)
+#	target_link_libraries(${BR_TEST_CLIENT_NAME} sqlite3)
+#endif()
 
 # OS Specific
 if(BR_WINDOWS)
-	target_link_libraries(${BR_CLIENT_NAME_TEST} ${SQLITE3_LIBRARY})
-	target_link_libraries(${BR_CLIENT_NAME_TEST} ws2_32)
-	target_link_libraries(${BR_CLIENT_NAME_TEST} wsock32)
+#	target_link_libraries(${BR_TEST_CLIENT_NAME} ${SQLITE3_LIBRARY})
+	target_link_libraries(${BR_TEST_CLIENT_NAME} ws2_32)
+	target_link_libraries(${BR_TEST_CLIENT_NAME} wsock32)
 endif()
