--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -6,6 +6,7 @@ project(${BR_SERVER_NAME})
 
 set(BR_SERVER_HEADERS
 	src/con_handler.h
+	src/Console.h
 	src/MemDBmap.h
 	src/MemDBuid.h
 	src/MiniDB.h
@@ -17,6 +18,7 @@ set(BR_SERVER_HEADERS
 set(BR_SERVER_SOURCES
 	src/BattleshipRoyale.cpp
 	src/con_handler.cpp
+	src/Console.cpp
 	src/MemDBmap.cpp
 	src/MemDBuid.cpp
 	src/MiniDB.cpp
