--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -31,12 +31,13 @@ add_executable(${BR_CLIENT_NAME} ${BR_CLIENT_HEADERS} ${BR_CLIENT_SOURCES})
 # Link Lib
 ################################
 
-target_link_libraries(${BR_CLIENT_NAME} ${USE_LIB} ${CURSES_LIBRARIES})
+target_link_libraries(${BR_CLIENT_NAME} ${USE_LIB})
 
 target_include_directories(${BR_CLIENT_NAME} PUBLIC ${SPDLOG_LIB_INCLUDE})
 target_include_directories(${BR_CLIENT_NAME} PUBLIC ${CXXOPTS_LIB_INCLUDE})
 target_include_directories(${BR_CLIENT_NAME} PUBLIC ${BR_LIB_INCLUDE})
 target_include_directories(${BR_CLIENT_NAME} PUBLIC ${Boost_INCLUDE_DIRS})
+target_include_directories(${BR_CLIENT_NAME} PUBLIC ${NCURSES_LIB_INCLUDE})
 
 #if(BR_UNIX)
 #	target_link_libraries(${BR_CLIENT_NAME} sqlite3)
@@ -45,6 +46,12 @@ target_include_directories(${BR_CLIENT_NAME} PUBLIC ${Boost_INCLUDE_DIRS})
 # OS Specific
 if(BR_WINDOWS)
 	target_link_libraries(${BR_CLIENT_NAME} ${SQLITE3_LIBRARY})
+
+	target_link_libraries(${BR_CLIENT_NAME} ${NCURSES_LIBRARY_FORM})
+	target_link_libraries(${BR_CLIENT_NAME} ${NCURSES_LIBRARY_MENU})
+	target_link_libraries(${BR_CLIENT_NAME} ${NCURSES_LIBRARY})
+	target_link_libraries(${BR_CLIENT_NAME} ${NCURSES_LIBRARY_PANEL})
+	
 	target_link_libraries(${BR_CLIENT_NAME} ws2_32)
 	target_link_libraries(${BR_CLIENT_NAME} wsock32)
 endif()
