--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,7 +100,7 @@ if(BR_UNIX)
     #add_compile_options(-Wall -O0 -g -pipe -msse2 -fopenmp -lsqlite3 -lpthread)
 
     #release
-    add_compile_options(-Wall -O0 -g -lncursesw -pipe -msse2 -fopenmp -lsqlite3 -lpthread)
+    add_compile_options(-Wall -O2 -g -lncurses -pipe -msse2 -fopenmp -lsqlite3 -lpthread)
 
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 endif()
