--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -43,7 +43,10 @@ target_include_directories(${BR_CLIENT_NAME} PUBLIC ${BR_LIB_INCLUDE})
 target_include_directories(${BR_CLIENT_NAME} PUBLIC ${Boost_INCLUDE_DIRS})
 
 # OS Specific
-if(BR_WINDOWS)	
+if(BR_WINDOWS)
+	target_include_directories(${BR_CLIENT_NAME} PUBLIC ${PDCURSES_LIB_INCLUDE})
+	target_link_libraries(${BR_CLIENT_NAME} ${PDCURSES_LIBRARY})
+	
 	target_link_libraries(${BR_CLIENT_NAME} ws2_32)
 	target_link_libraries(${BR_CLIENT_NAME} wsock32)
 endif()
