--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ else()
     set(    BR_UNIX    1    )
 endif()
 
-set(    BR_SERVER      1    CACHE BOOL "BR_SERVER"          )
+set(    BR_SERVER      0    CACHE BOOL "BR_SERVER"          )
 set(    BR_CLIENT      1    CACHE BOOL "BR_CLIENT"          )
 set(    BR_TEST_SERVER 0    CACHE BOOL "BR_TEST_SERVER"     )           # <--- DELETE THIS ON STABLE
 set(    BR_TEST_CLIENT 0    CACHE BOOL "BR_TEST_CLIENT"     )           # <--- DELETE THIS ON STABLE
@@ -23,6 +23,7 @@ set(    BR_TEST_MINIDB 0    CACHE BOOL "BR_TEST_MINIDB"     )           # <--- D
 set(    BR_TEST_MEMDB  0    CACHE BOOL "BR_TEST_MEMDB"      )           # <--- DELETE THIS ON STABLE
 set(    BR_TEST_CONSO  0    CACHE BOOL "BR_TEST_CONSO"      )           # <--- DELETE THIS ON STABLE
 set(    BR_TEST_SPDLOG 0    CACHE BOOL "BR_TEST_SPDLOG"     )           # <--- DELETE THIS ON STABLE
+set(    BR_TEST_TRANSLATE 1 CACHE BOOL "BR_TEST_TRANSLATE"  )           # <--- DELETE THIS ON STABLE
 
 set(    BR_SERVER_NAME          BattleshipRoyale_Server         )
 set(    BR_CLIENT_NAME          BattleshipRoyale_Client         )
@@ -33,6 +34,7 @@ set(    BR_TEST_MINIDB_NAME     BattleshipRoyale_MINIDB_TEST    )       # <--- D
 set(    BR_TEST_MEMDB_NAME      BattleshipRoyale_MEMDB_TEST     )       # <--- DELETE THIS ON STABLE
 set(    BR_TEST_CONSO_NAME      BattleshipRoyale_CONSO_TEST     )       # <--- DELETE THIS ON STABLE
 set(    BR_TEST_SPDLOG_NAME     BattleshipRoyale_SPDLOG_TEST    )       # <--- DELETE THIS ON STABLE
+set(    BR_TEST_TRANSLATE_NAME  BattleshipRoyale_TRANSLATE_TEST )       # <--- DELETE THIS ON STABLE
 
 ################################
 # Lib
@@ -103,7 +105,7 @@ endif()
 
 if(BR_UNIX)
     #debug
-    add_compile_options(-Wall -O0 -g -lncurses -pipe -fopenmp -lsqlite3 -lpthread)
+    add_compile_options(-Wall -O0 -g -lncursesw -pipe -fopenmp -lsqlite3 -lpthread)
 
     #release
     #add_compile_options(-Wall -O2 -g -lncurses -pipe -fopenmp -lsqlite3 -lpthread)
@@ -155,4 +157,8 @@ endif()                                            # <--- DELETE THIS ON STABLE
 
 if(BR_TEST_SPDLOG)                                 # <--- DELETE THIS ON STABLE
 	add_subdirectory(src/testing/spdlog)           # <--- DELETE THIS ON STABLE
+endif()                                            # <--- DELETE THIS ON STABLE
+
+if(BR_TEST_TRANSLATE)                              # <--- DELETE THIS ON STABLE
+	add_subdirectory(src/testing/translation)      # <--- DELETE THIS ON STABLE
 endif()                                            # <--- DELETE THIS ON STABLE
