--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ set(    BR_TEST_MINIDB 0    CACHE BOOL "BR_TEST_MINIDB"     )           # <--- D
 set(    BR_TEST_MEMDB  0    CACHE BOOL "BR_TEST_MEMDB"      )           # <--- DELETE THIS ON STABLE
 set(    BR_TEST_CONSO  0    CACHE BOOL "BR_TEST_CONSO"      )           # <--- DELETE THIS ON STABLE
 set(    BR_TEST_SPDLOG 0    CACHE BOOL "BR_TEST_SPDLOG"     )           # <--- DELETE THIS ON STABLE
-set(    BR_TEST_TRANSLATE 1 CACHE BOOL "BR_TEST_TRANSLATE"  )           # <--- DELETE THIS ON STABLE
+set(    BR_TEST_TRANSLATE 0 CACHE BOOL "BR_TEST_TRANSLATE"  )           # <--- DELETE THIS ON STABLE
 
 set(    BR_SERVER_NAME          BattleshipRoyale_Server         )
 set(    BR_CLIENT_NAME          BattleshipRoyale_Client         )
@@ -45,6 +45,7 @@ set(    SQLITE3_LIB_INCLUDE     "${CMAKE_SOURCE_DIR}/lib/sqlite3"               
 set(    PICOSHA2_LIB_INCLUDE    "${CMAKE_SOURCE_DIR}/lib/picosha2"                      CACHE PATH "picosha2 lib include"                    )
 set(    PDCURSES_LIB_INCLUDE    "${CMAKE_SOURCE_DIR}/lib/PDCurses/include"              CACHE PATH "PDCurses lib include"                    )
 #set(    NCURSES_LIB_INCLUDE     "${CMAKE_SOURCE_DIR}/lib/ncurses/include"               CACHE PATH "ncurses lib include"                     )
+set(    TINYXML2_LIB_INCLUDE    "${CMAKE_SOURCE_DIR}/lib/tinyxml2/include"              CACHE PATH "tinyxml2 lib include"                    )
 
 set(    SQLITE3_LIBRARY         "${CMAKE_SOURCE_DIR}/lib/sqlite3/sqlite3.dll"           CACHE FILEPATH  "sqlite3 *.dll file"                 )
 set(    PDCURSES_LIBRARY        "${CMAKE_SOURCE_DIR}/lib/PDCurses/lib/pdcurses.dll"     CACHE FILEPATH  "pdcurses *.dll file"                )
