--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,7 +99,7 @@ if(BR_UNIX)
     link_directories(/usr/lib)
 endif()
 
-#
+# Boost
 set(USE_LIB_EXP Boost::regex)
 set(USE_LIB ${Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_REGEX_LIBARY} ${USE_LIB_EXP})
 
